fix(kit): use wrap for non-breaking string in `line-clamp`

--- a/projects/kit/components/line-clamp/line-clamp.style.less
+++ b/projects/kit/components/line-clamp/line-clamp.style.less
@@ -17,6 +17,7 @@
     /* autoprefixer: ignore next */
     -webkit-box-orient: vertical;
     overflow: hidden;
+    overflow-wrap: anywhere;
 
     ::ng-deep > * {
         white-space: initial;
